<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="5dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/cv_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/item_now_play"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_item_poster"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/gambar_club"
                android:scaleType="centerCrop"
                android:src="@color/colorAccent"/>

            <TextView
                android:textColor="@color/colorHitam"
                android:id="@+id/tv_nama_club"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_poster"
                android:layout_toRightOf="@id/img_item_poster"
                android:textSize="16sp"
                android:text="@string/nama_club"
                android:textStyle="bold"/>

            <TextView
                android:textColor="@color/colorHitam"
                android:id="@+id/tv_liga_club"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nama_club"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_poster"
                android:layout_toRightOf="@id/img_item_poster"
                android:maxLines="5"
                tools:text="@string/liga_club" />

            <TextView
                android:textColor="@color/colorHitam"
                android:id="@+id/tv_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_liga_club"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_poster"
                android:layout_toRightOf="@id/img_item_poster"
                android:maxLines="5"
                tools:text="@string/manager" />

            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_manager"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@+id/img_item_poster"
                android:layout_toRightOf="@+id/img_item_poster"
                android:layout_marginBottom="@dimen/tiny_margin"
                android:gravity="center"
                android:maxLines="1"
                android:textStyle="bold"
                tools:text="@string/website" />

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_below="@id/tv_manager"
                android:layout_toRightOf="@id/img_item_poster"
                android:layout_toEndOf="@id/img_item_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <Button
                    android:layout_marginRight="@dimen/small_margin"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/btn_set_detail"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail"/>

                <Button
                    android:layout_marginLeft="@dimen/small_margin"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/btn_set_share"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share"/>

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>